2007-08-11  Luca Bruno  <lethalman88@gmail.com>

	* plugins/wingui/SConscript: fixed building

	Renamed all 'class' to 'klass' for C++ compilation support.
	Applied issue #9 patch

2007-08-10  Luca Bruno  <lethalman88@gmail.com>

	Refactored all inline to be inserted into headers (issue #9).
	Added dllimport and dllexport attributes when building DLLs.
	
	* syx/syx-memory.c (syx_freev): removed

	* plugins/gtk/st/GtkScrolledWindow.st: added

	* plugins/gtk/st/GtkAdjustment.st: added

	* plugins/gtk/plugin-init.c (syx_g_closure_marshal): added marshal function for GClosure

	* plugins/gtk/st/GObject.st (GClosure): added wrapper
	
	* syx/syx-utils.c (syx_send_messagev): added

	* syx/syx-plugins.c (syx_plugin_symbol): added

	* st/kernel/SystemDictionary.st (plugin:cSymbol:): added with primitive

2007-08-09  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-scheduler.c (syx_scheduler_remove_process): set next process to be active

	* syx/syx-primitives.c (ArrayedCollection_replaceFromToWith): added yet more checks

	* syx/syx-plugins.c (syx_plugin_call_interp): support C calls to nil plugin (main program)

	* st/kernel/Compiler.st (indexOfInstance): support C calls to nil plugin (main program)

	* SConstruct: added inline checks (issue #9)

	* syx/syx-platform.h: inline defines (issue #9)

	* syx/syx-parser.c: indented file and fixed typo (issue #10)
	(_syx_parser_parse_primitive): support C calls to the main program

	* syx/syx-utils.c (syx_do_it_blocking): added

2007-08-08  Luca Bruno  <lethalman88@gmail.com>

	Added support for MSVC compilation (issue #8)
	
	* syx/syx-plugins.c (syx_plugin_call): added, previous was renamed to syx_plugin_call_interp
	(syx_plugins_init): added for creating a default method to send #primitiveFailed
	Added support for main program handle (NULL filename)

	* st/kernel/SystemDictionary.st (plugin:cCall:withArguments:): added with relative primitive
	(cCall:withArguments:): added

	* syx/syx-utils.c (syx_file_in_blocking): added
